--- a/eTickets/Views/Orders/Index.cshtml
+++ b/eTickets/Views/Orders/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Order>
 
-@{ 
+@{
     ViewData["Title"] = "All orders";
 }
 
@@ -15,7 +15,11 @@
                     <th>Order ID</th>
                     <th>Items</th>
                     <th>Total</th>
-                    <th>User</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>User</th>
+                    }
+
                 </tr>
             </thead>
             <tbody>
@@ -23,18 +27,25 @@
                 {
                 <tr>
                     <td class="align-middle">@order.Id</td>
-                    <td class="align-middle"><ul style="list-style-type:none">@foreach (var item in order.OrderItems)
+                    <td class="align-middle">
+                        <ul style="list-style-type:none">
+                            @foreach (var item in order.OrderItems)
+                            {
+                                <li>
+                                    <div class="alert alert-info" role="alert">
+                                        <span class="badge bg-success">@item.Amount</span> [@item.Price.ToString("c")] - @item.Movie.Name
+                                    </div>
+                                </li>
+                            }
+                        </ul>
+                    </td>
+                    <td class="align-middle">@order.OrderItems.Select(m => m.Movie.Price * m.Amount).Sum().ToString("c")</td>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                     {
-                        <li>
-                            <div class="alert alert-info" role="alert">
-                                <span class="badge bg-success">@item.Amount</span> [@item.Price.ToString("c")] - @item.Movie.Name
-                            </div>
-                        </li>
-                    }</ul></td>
-                    <td class="align-middle">@order.OrderItems.Select(m=>m.Movie.Price * m.Amount).Sum().ToString("c")</td>
-                    <td class="align-middle"> - </td>
-                </tr>
-                }
+                        <td class="align-middle"> @order.User.FullName </td>
+                    }
+                    </tr>
+            }
             </tbody>
         </table>
     </div>
